log
Thu 11 May 2023 04:54:57 PM UTC: 
 tests:  0|4
total_score: 0/70
b8a3bb1
Thu 11 May 2023 05:00:17 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
f5c716a
Thu 11 May 2023 05:07:37 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:33:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   if(pq->size == 0) return NULL;
      |                            ^~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
heap.c:35:23: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   35 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd86e70
Thu 11 May 2023 05:08:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:33:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   if(pq->size == 0) return NULL;
      |                            ^~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
heap.c:35:26: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   35 |   return pq->heapArray[0].data;
      |          ~~~~~~~~~~~~~~~~^~~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
48a5fff
Thu 11 May 2023 05:11:16 PM UTC: 
 heap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   24 |   return pq->heapArray[0]->data;
      |                          ^~
heap.c:25:3: error: control reaches end of non-void function [-Werror=return-type]
   25 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
35f6b57
Thu 11 May 2023 05:11:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
069acf9
Thu 11 May 2023 06:20:54 PM UTC: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6eae2c7
Thu 11 May 2023 06:23:48 PM UTC: 
 heap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:
heap.c:60:1: error: expected identifier or ‘(’ before ‘}’ token
   60 | }
      | ^
Compilation failed
9cd9cac
Thu 11 May 2023 06:24:20 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
73d7da7
Thu 11 May 2023 06:25:49 PM UTC: 
 heap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:43:35: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘heapElem *’ {aka ‘struct nodo *’}
   43 |     pq->heapArray[currentIndex] = nuevo;
      |                                   ^~~~~
Compilation failed
a0e7fc3
Thu 11 May 2023 06:27:17 PM UTC: 
 heap.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:22: error: expected expression before ‘;’ token
   37 |     heapElem nuevo = ;
      |                      ^
Compilation failed
c61b1d7
Thu 11 May 2023 06:29:03 PM UTC: 
 heap.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  7|1
total_score: 45/70
bd5871d
Thu 11 May 2023 06:41:19 PM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
9ffb3d1
Thu 11 May 2023 06:42:43 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|1
total_score: 45/70
d151f08
Thu 11 May 2023 06:54:51 PM UTC: 
 heap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:55: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   73 |     if (izq < pq->size && pq->heapArray[izq].priority > pq->heapArray[izq].priority)
      |                                                       ^
heap.c:78:55: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   78 |     if (der < pq->size && pq->heapArray[der].priority > pq->heapArray[der].priority)
      |                                                       ^
cc1: all warnings being treated as errors
Compilation failed
cd0f5cd
Thu 11 May 2023 06:56:02 PM UTC: 
 heap.c | 55 +++++++++++++++++++++++++------------------------------
 1 file changed, 25 insertions(+), 30 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:60:1: error: expected declaration specifiers before ‘if’
   60 | if (pq->size == 0) {
      | ^~
heap.c:65:5: error: expected declaration specifiers before ‘pq’
   65 |     pq->heapArray[0] = pq->heapArray[pq->size - 1];
      |     ^~
heap.c:66:5: error: expected declaration specifiers before ‘pq’
   66 |     pq->size--;
      |     ^~
heap.c:69:5: error: parameter ‘currentIndex’ is initialized
   69 |     int currentIndex = 0;
      |     ^~~
heap.c:70:5: error: expected declaration specifiers before ‘while’
   70 |     while (1) {
      |     ^~~~~
heap.c:98:1: error: expected declaration specifiers before ‘}’ token
   98 | }
      | ^
test.c:6:34: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
    6 | char * _strdup(const char * str) {
      |                                  ^
test.c:13:1: error: parameter ‘test_id’ is initialized
   13 | int test_id = -1;
      | ^~~
test.c:16:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   16 | int success(){
      |              ^
test.c:21:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   21 | void err_msg(char* msg){
      |                        ^
test.c:28:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   28 | void ok_msg(char* msg){
      |                       ^
test.c:34:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   34 | void info_msg(char* msg){
      |                         ^
test.c:39:75: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   39 | int test_suite(int(*test)(), char* msg, int max_score, int id, int req_id){
      |                                                                           ^
test.c:55:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   55 | void view_array(Heap* h){
      |                         ^
test.c:64:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   64 | Heap* initialize_heap(){
      |                        ^
test.c:80:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   80 | int test_create(){
      |                  ^
test.c:116:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  116 | int test_top(){
      |               ^
test.c:145:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  145 | int test_push(){
      |                ^
test.c:222:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  222 | int test_pop(){
      |               ^
test.c:276:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  276 | int main( int argc, char *argv[] ) {
      |                                    ^
In file included from test.c:4:
heap.c:59:6: error: old-style parameter declarations in prototyped function definition
   59 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
test.c:293: error: expected ‘{’ at end of input
Compilation failed
718432f
Thu 11 May 2023 06:56:31 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccYO1RGu.o: in function `test_create':
test.c:(.text+0x296): undefined reference to `createHeap'
collect2: error: ld returned 1 exit status
Compilation failed
d635e2f
Thu 11 May 2023 06:56:37 PM UTC: 
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccQe6GQO.o: in function `test_create':
test.c:(.text+0x296): undefined reference to `createHeap'
collect2: error: ld returned 1 exit status
Compilation failed
9b81559
